@@ -43,6 +43,7 @@ Motonori Iwamuro	bug report and fix method about strbuf_fgets function.
 Oleg Checkulaev		advice about writing code for generic UNIX.
 Oliver Paukstadt	idea about -c (gzipped html) option of htags(1).
 Paul Lew		advice about compat.h for Solaris.
+Philippe Defert		building on many plathomes and the problem report.
 Richard Stallman	advice about gtags.el and GNU style packaging.
 Ron Lee			Debian package, htmake(1) and many bug reports.
 Sadaichi Hayashida	idea about generating relative path.
